# Multicamera-Extrinsic-Pose-Graph-Calibration

./: .gitignore  .~lock.nodes_edges_format.ods#  CMakeLists.txt  Edges.csv  Main_Optimise_PoseGraph_CSV.m  Nodes.csv  OptimisePoseGraphCSV.m  README.md  package.xml
ArUcoCustomBoard/: CreateCustomArucoBoardYAML.asv  CreateCustomArucoBoardYAML.m  aruco-board-markers.yaml  importSVG.m
ArUcoCustomBoard/rvctools/robot/: LinearUR10Test.m  PlaceObject.m  RobotCows.m  UR5Test.m
ArUcoCustomBoard/rvctools/robot/@DensoVM6083/: DensoVM6083.m
ArUcoCustomBoard/rvctools/robot/@LinearUR10/: LinearUR10.m
ArUcoCustomBoard/rvctools/robot/@LinearUR5/: LinearUR5.m
ArUcoCustomBoard/rvctools/robot/@ParrotQuadrotorSquad/: ParrotQuadrotorSquad.m
ArUcoCustomBoard/rvctools/robot/@SchunkUTSv2_0/: SchunkUTSv2_0.m
ArUcoCustomBoard/rvctools/robot/@UFOFleet/: Haneubu+uf_model on 3D Warehouse by Ivan P..url  UFOFleet.m
ArUcoCustomBoard/rvctools/robot/@UR10/: UR10.m
ArUcoCustomBoard/rvctools/robot/@UR5/: UR5.m
ArUcoCustomBoard/rvctools/robot/ply/: plywrite.m
aruco_yaml/: CMakeLists.txt  aruco-board-markers.yaml  main.cpp
pose_graph_csv/: Nodes.csv  nodes_edges_format.ods  optimised_camera_poses.csv
src/: calibration.cpp  calibration.h  calibration_interface.h  camera.cpp  camera.h  camera_interface.h  camera_wrapper.cpp  camera_wrapper.h  main.cpp  read_yaml.cpp  ros_wrapper.cpp  ros_wrapper.h  wrapper.cpp  wrapper.h  yaml_reader.cpp  yaml_reader.h
yaml/: aruco-board-markers.yaml  camera_info.yaml
